# ebook-manager

./: .env.example  .gitignore  01_PRODUCT_REQUIREMENTS.md  09_METADATA_SPEC.md  11_ACCEPTANCE_CRITERIA.md  16_IMPLEMENTATION_PROMPT_PHASE_5_OFFLINE_SYNC.md  17_CODEX_GUARDRAILS.md  README.md  app.py  compose.yaml  docker-compose.yml  package.json  requirements.txt  server.js
android-reader/: README.md  settings.gradle.kts
app/: main.py  models.py  store.py
aurelia-android-reader-docs/: 00_MASTER_PROMPT_CODEX.md  01_ANDROID_READER_PRD.md  03_ANDROID_ARCHITECTURE.md  (+6 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202604260001_initial_schema.py  202605020001_library_trash.py  202605020002_import_queue_settings.py
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  books.py  health.py  imports.py  organization.py  settings.py  sync.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  book.py  import_job.py  metadata.py  reading.py  settings.py  sync.py  types.py  user.py
backend/app/schemas/: __init__.py  auth.py  book.py  imports.py  metadata.py  organization.py  settings.py  sync.py
backend/app/services/: __init__.py  bookmark_service.py  epub_service.py  import_queue_service.py  import_service.py  metadata_enrichment_service.py  metadata_service.py  progress_service.py  settings_service.py  storage_service.py  user_service.py
backend/tests/: test_auth.py  test_metadata_service.py
(+116 files in other folders)
